tests/errors/vis_private/vis_private.fs
module rec vis_private.Program

open vis_private.vis_private_sub

let main _ =
  vis_private_sub.privateFun ()
  0
